# betterMem

./: .gitignore  README.md  pyproject.toml
demo/: attentionIsAllYouNeed.txt  basic_usage.py
demo/chroma_store/: chroma.sqlite3
docs/config/: README.md
src/bettermem/: __init__.py
src/bettermem/api/: README.md  client.py  config.py  embeddings.py
src/bettermem/core/: README.md  edges.py  graph.py  navigation_policy.py  nodes.py  transition_model.py  traversal_engine.py
src/bettermem/indexing/: README.md  chunker.py  corpus_indexer.py  keyword_mapper.py  structure_aware_chunker.py
src/bettermem/learning/: README.md  __init__.py  entropy_control.py  reinforcement.py  smoothing.py
src/bettermem/retrieval/: README.md  __init__.py  context_aggregator.py  intent.py  query_initializer.py  relation.py  scorer.py
src/bettermem/storage/: README.md  persistence.py  sparse_tensor.py
src/bettermem/topic_modeling/: README.md  __init__.py  base.py  bertopic_adapter.py  lda_adapter.py  semantic_hierarchical.py
tests/: test_api_usage_integration.py  test_config_and_nodes.py  test_graph_and_sparse_tensor.py  test_indexing_and_retrieval_components.py  test_intent_and_navigation.py  test_learning_utils.py  test_persistence_and_client.py  test_smoke.py  test_topic_model_adapters.py  test_transition_and_traversal.py
