[project]
name = "bettermem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jpisnice", email = "www.janardhanpolle@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.3.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0,<3.0.0",
    "sentence-transformers>=2.0.0",
    "scikit-learn>=1.0.0",
]

[project.scripts]
bettermem = "bettermem:main"

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
